--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 📂 Sync build folder via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          local-dir: dist
+          local-dir: dist/
           server: ftps4.us.freehostia.com
           username: estavi7
           password: ${{ secrets.FTP_PASSWORD }}
