--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Ajusta la versión según tus necesidades
+          node-version: '18'  # Specifically, packages like ESLint, TypeScript ESLint, Vite, React Hook Form, and others need Node.js ≥ 18.0.0
 
       - name: 📦 Install dependencies
         run: npm install
